Fix gap above background picture

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -868,8 +868,6 @@ body {
 
 
 
-
-body{margin-top:20px;}
 .timeline-steps {
     display: flex;
     justify-content: center;
